Allineate le API alla spec richiesta da WASAText e risolti tutti i problemi dei linter
